--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Build & Release Locke
 on:
   push:
     branches:
-      - master   # Trigger on any commit merged to master
+      - main
 
 permissions:
   contents: write
@@ -16,10 +16,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Java 1.8
+      - name: Set up Java 8
         uses: actions/setup-java@v4
         with:
-          java-version: '1.8'
+          java-version: 8
           distribution: 'temurin'
 
       - name: Build with Maven
