--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>Cp1252</project.build.sourceEncoding>
+        <sonar.organization>matheuscodes-analysed</sonar.organization>
     </properties>
 
     <build>
