--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
                 </configuration>
             </plugin>
 
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.9.1.2184</version>
+            </plugin>
+
             <!-- Copy DB files next to the JAR -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
