--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,29 +13,22 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Set up JDK 17
+      - name: Build with Java 8
         uses: actions/setup-java@v4
         with:
-          java-version: 8
+          java-version: '8'
           distribution: 'temurin'
-      - name: Cache SonarQube packages
-        uses: actions/cache@v4
+
+      - run: mvn clean package
+
+      - name: Set up Java 17 for Sonar
+        uses: actions/setup-java@v4
         with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-      - name: Cache Maven packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-      - name: Build and analyze
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
-          mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
-            -Dsonar.projectKey=matheuscodes_locke \
-            -Dsonar.organization=matheuscodes-analysed \
-            -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.login=${SONAR_TOKEN}
+          java-version: '17'
+          distribution: 'temurin'
+
+      - run: mvn org.sonarsource.scanner.maven:sonar-maven-plugin:3.11.0.3922:sonar \
+          -Dsonar.projectKey=matheuscodes_locke \
+          -Dsonar.organization=matheuscodes-analysed \
+          -Dsonar.host.url=https://sonarcloud.io \
+          -Dsonar.login=${{ secrets.SONAR_TOKEN }}
