--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,8 +27,8 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - run: mvn org.sonarsource.scanner.maven:sonar-maven-plugin:3.11.0.3922:sonar \
+      - run: mvn -B org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
           -Dsonar.projectKey=matheuscodes_locke \
           -Dsonar.organization=matheuscodes-analysed \
           -Dsonar.host.url=https://sonarcloud.io \
-          -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+          -Dsonar.login=${SONAR_TOKEN}
