--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,8 +27,9 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - run: mvn -B org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
-          -Dsonar.projectKey=matheuscodes_locke \
-          -Dsonar.organization=matheuscodes-analysed \
-          -Dsonar.host.url=https://sonarcloud.io \
-          -Dsonar.login=${SONAR_TOKEN}
+      - run: mvn sonar:sonar \
+              -Dsonar.projectKey=matheuscodes_locke \
+              -Dsonar.organization=matheuscodes-analysed \
+              -Dsonar.host.url=https://sonarcloud.io \
+              -Dsonar.login=${SONAR_TOKEN} \
+              -Dsonar.java.binaries=target
