--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,10 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - run: mvn sonar:sonar \
+      - name: Run SonarCloud analysis
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn sonar:sonar \
               -Dsonar.projectKey=matheuscodes_locke \
               -Dsonar.organization=matheuscodes-analysed \
               -Dsonar.host.url=https://sonarcloud.io \
