--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,9 +30,10 @@ jobs:
       - name: Run SonarCloud analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn sonar:sonar \
-              -Dsonar.projectKey=matheuscodes_locke \
-              -Dsonar.organization=matheuscodes-analysed \
-              -Dsonar.host.url=https://sonarcloud.io \
-              -Dsonar.login=${SONAR_TOKEN} \
-              -Dsonar.java.binaries=target
+        run: |
+          mvn sonar:sonar \
+            -Dsonar.projectKey=matheuscodes_locke \
+            -Dsonar.organization=matheuscodes-analysed \
+            -Dsonar.host.url=https://sonarcloud.io \
+            -Dsonar.login=${SONAR_TOKEN} \
+            -Dsonar.java.binaries=target
