--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,12 @@ jobs:
           export DISPLAY=:99
           mvn clean verify
 
+      - name: Upload JaCoCo report
+        uses: actions/upload-artifact@v4
+        with:
+          name: jacoco-report
+          path: target/site/jacoco/jacoco.xml
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
@@ -55,4 +61,7 @@ jobs:
             -Dsonar.organization=matheuscodes-analysed \
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.token=${SONAR_TOKEN} \
-            -Dsonar.java.binaries=target
+            -Dsonar.java.binaries=target \
+            -Dsonar.pullrequest.key=${{ github.event.pull_request.number }} \
+            -Dsonar.pullrequest.branch=${{ github.head_ref }} \
+            -Dsonar.pullrequest.base=${{ github.base_ref }}
